--- a/app/views/layouts/_task_form.html.erb
+++ b/app/views/layouts/_task_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row ml-3">
       <div class="offset-md-3 col-md-6 offset-md-3">
-          <%= form_tag(tasks_path, method: "post", class: "form", id: "contact-form")  do %>
+          <%= form_tag(tasks_path, method: "post", remote: true, class: "form", id: "contact-form")  do %>
               <div class="form-group">
                   <%= label_tag "Task", nil, class: "form-label" %>
                   <%= text_field_tag :title, nil, class: "form-control", placeholder: "Buy burgers" %>
