--- a/app/views/emails/_email_object.html.erb
+++ b/app/views/emails/_email_object.html.erb
@@ -1,1 +1,1 @@
-<p class="px-3" id="email-<%=email.id%>"><%=link_to email.object, email_path(email, :read => true), remote: true, method: "put", :class => "read-#{email.read}"%></p><hr>
+<p class="px-3" id="email-<%=email.id%>"><%=link_to email.object, email_path(email, :read => true), remote: true, method: "put", :class => "read-#{email.read}", :id => "link-#{email.id}"%></p><hr id="hr-<%=email.id%>">
