--- a/app/views/emails/destroy.js.erb
+++ b/app/views/emails/destroy.js.erb
@@ -1,4 +1,3 @@
-alert("le fichier JS destroy est exécuté");
-console.log(document.getElementById'(email-<%=@email.id%>'));
 document.getElementById('email-<%=@email.id%>').remove();
+document.getElementById('hr-<%=@email.id%>').remove();
 document.getElementById("email-display").innerHTML = "";
