--- a/app/views/tasks/update.js.erb
+++ b/app/views/tasks/update.js.erb
@@ -1,3 +1,11 @@
 alert("le fichier JS update est exécuté");
-document.getElementById('task-<%=@task.id%>').style.textDecoration ="line-through";
-console.log(document.querySelector("#task-<%=@task.id%> > span")).remove;
+console.log(document.getElementById("checkbox-<%=@task.id%>"));
+if (<%=@task.status%> == true) {
+    alert("je suis dans le if");
+  document.getElementById('task-<%=@task.id%>').style.textDecoration ="line-through";
+  document.getElementById("checkbox-<%=@task.id%>").setAttribute("data-params", "id=<%=@task.id%>&status=false");
+} 
+else {
+  document.getElementById('task-<%=@task.id%>').style.textDecoration ="none";
+  document.getElementById("checkbox-<%=@task.id%>").setAttribute("data-params", "id=<%=@task.id%>&status=true");
+}
