--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,6 +26,6 @@
       </li>
       
     </ul>
-        <img class="rounded-circle" height="50px" width="50px" src="https://lh3.googleusercontent.com/ogw/ADea4I4i4dNofmxCK27H2yRCKdGdFzYytBRoJjTaVkEJjw=s64-c-mo">
+        <img class="rounded-circle" height="50px" width="50px" src="http://2.bp.blogspot.com/-pJX9gfhzgU8/TueaxhbyAqI/AAAAAAAAALc/T3OofY3BfRI/s320/fo.jpg">
   </div>
 </nav>
