--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
+
+@import "font-awesome-sprockets";
 @import "variables/personal_variables";
 @import "variables/bootstrap_variables";
 
 @import "bootstrap";
+
 @import "font-awesome";
 @import "components/*";
 @import 'style' 
