--- a/app/views/emails/create.js.erb
+++ b/app/views/emails/create.js.erb
@@ -1,2 +1,2 @@
 console.log(document.getElementById("email-list"));
-document.getElementById("email-list").insertAdjacentHTML("beforeend", "<%= j render 'email_object', email: @email%>");
+document.getElementById("email-list").insertAdjacentHTML("afterbegin", "<%= j render 'email_object', email: @email%>");
