--- a/app/views/emails/update.js.erb
+++ b/app/views/emails/update.js.erb
@@ -3,12 +3,13 @@ document.getElementById("email-display").insertAdjacentHTML("beforeend", "<%= j 
 console.log(<%=@email.read%>);
 
 if (<%=@email.read%> == true){
-  document.getElementById("button-<%=@email.id%>").textContent = "Marquer comme non lu";
+  document.getElementById("enveloppe").className = "fa-solid fa-envelope";
   document.getElementById("link-<%=@email.id%>").style.color="black";
   document.getElementById("link-<%=@email.id%>").style.fontWeight="400";
 } 
 else {
-  document.getElementById("button-<%=@email.id%>").textContent = "Marquer comme lu";
+  document.getElementById("enveloppe").className = "";
+  document.getElementById("enveloppe").className = "fa-solid fa-envelope-open";
   document.getElementById("link-<%=@email.id%>").style.color= "#007bff";
   document.getElementById("link-<%=@email.id%>").style.fontWeight="bold";
   document.getElementById("button-<%=@email.id%>").href = "/emails/<%=@email.id%>?read=true";
