--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <script src="https://kit.fontawesome.com/bc0b8bcb2a.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -15,4 +16,13 @@
     <%= render 'layouts/flash'  %>
     <%= yield %>
   </body>
+<script>
+
+let check_list = []
+document.querySelector("#button-1").addEventListener("click", function(e) {
+	// e.target was the clicked element
+  console.log(document.querySelectorAll("input[type=checkbox]:checked"));
+		});
+</script>
+
 </html>
