--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,10 +1,18 @@
-
-<li id="task-<%=task.id%>" class="removed-<%=task.status%>">
-<span><%= check_box_tag "checkbox-#{task.id}", true , task.status , data: { remote: true, url: task_path(task), params: { id: task.id, status: true}.to_param, method: "put"}, :class => "checkbox-#{task.id}" %></span>
-    <%= task.title  %>
-    <% unless task.deadline.nil? %>
-            , to read: <%= task.deadline.strftime('%D')  %>
-    <% end %>
-    <%= link_to "Edit this task", edit_task_path(task) %>
-    <%= link_to "Delete", task_path(task), remote: true, method: :delete%> <i class="fa-solid fa-trash-can"></i>
+<li id="task-<%=task.id%>" class=" removed-<%=task.status%>">
+  <div class="row ">
+    <div class="col-9"><span><%= check_box_tag "checkbox-#{task.id}", true , task.status , data: { remote: true, url: task_path(task), params: { id: task.id, status: true}.to_param, method: "put"}, :class => "checkbox-#{task.id}" %></span>
+      <%= task.title  %>
+      <% unless task.deadline.nil? %>
+        , to read: <%= task.deadline.strftime('%D')  %>
+      <% end %>
+    </div>
+    <div class="col-3 d-flex justify-content-center">
+      <%= link_to edit_task_path(task) do %>
+        <i class="fa-solid fa-pencil ml-2"></i>
+      <%end%>
+      <%= link_to task_path(task), remote: true, method: :delete do %>
+        <i class="fa-solid fa-trash-can ml-2"></i>
+      <%end%>
+    </div>
+  </div>
 </li>
