--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
   <body>
     <%= render 'layouts/navbar'  %>
     <%= render 'layouts/flash'  %>
-    <%= yield %>
+    <div class="container mx-5">
+      <%= yield %>
+    </div>
   </body>
 <script>
 
